--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: submodule init & update
         run: |
-          git submodule init,
+          git submodule init
           git submodule update
       
       - name: Builds project
